removed all highlights for PowerShell

--- a/mdwiki/pages/kb/microsoft/o365.md
+++ b/mdwiki/pages/kb/microsoft/o365.md
@@ -4,18 +4,12 @@
 
 1. Connect to Azure AD
 
-    ```powershell
-    Connect-AzureAD
-    ```
+    ```Connect-AzureAD```
 
 2. Connect to Microsoft Online
 
-    ```powershell
-    Connect-MsolService
-    ```
+    ```Connect-MsolService```
 
 3. Remove Microsoft Office licenses
 
-    ```powershell
-    Set-MsolUserLicense -UserPrincipalName $email -RemoveLicenses "timpes:OFFICESUBSCRIPTION"
-    ```
+    ```Set-MsolUserLicense -UserPrincipalName $email -RemoveLicenses "timpes:OFFICESUBSCRIPTION"```
